--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,13 @@
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+        <dependency>
+            <groupId>de.vandermeer</groupId>
+            <artifactId>asciitable</artifactId>
+            <version>0.3.2</version>
+        </dependency>
     </dependencies>
+
     <build>
         <sourceDirectory>src</sourceDirectory>
         <plugins>
