change dependency version

--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -36,7 +36,7 @@
             </goals>
           </execution>
           <execution>
-            <id>npm install</id>
+            <id>npm install --force</id>
             <goals>
               <goal>npm</goal>
             </goals>
